Light version + responsive

--- a/htmlroot/index.html
+++ b/htmlroot/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<title>Heidelberg Hebt Ab</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Allerta+Stencil&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 		<script type="text/javascript" src="main.js"></script>
 	</head>
 
@@ -17,9 +18,23 @@
 				<h1 class="heidelberg">HEIDELBERG</h1>
 				<div>
 					<h1 class="hebt_ab">HEBT AB</h1>
-					<h1 class="date">15.08.2022</h1>
+					<!-- <h1 class="date">15.10.2022</h1> -->
 				</div>
 			</div>
+		</div>
+		<div id="content">
+			<div class="topic">
+				<h4>15.10.2022</h4>
+				<div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.
+					</p>
+				</div>
+			</div>
+
 		</div>
 	</body>
 </html>
